# GraphicsEngine-OpenGL

./: Application.cpp  CMakeLists.txt  GraphicsEngine-OpenGL.sln  GraphicsEngine-OpenGL.vcxproj  GraphicsEngine-OpenGL.vcxproj.filters  README.md
Libraries/include/GE/: GraphicsEngine.h  InputCallbacks.h
Libraries/include/GE/Components/: Component.h  DirectionalLight.h  Light.h  Model.h  PointLight.h  Transform.h
Libraries/include/GE/Entity/: Camera.h  Object.h  Scene.h  SceneObject.h
Libraries/include/GE/HelperClasses/: Input.h  Mesh.h  Shader.h
Libraries/include/glad/: glad.h
Libraries/lib/: assimp-vc143-mt.lib  glfw3.lib
Res/Models/Sheep/: Sheep-bl.mtl
Res/Shaders/light/: Default.fs  Default.vs
Res/Shaders/lit/: lit.fs  lit.vs
Res/Shaders/unlit/: unlit.fs
src/: Camera.cpp  DirectionalLight.cpp  Input.cpp  Light.cpp  Mesh.cpp  Model.cpp  PointLight.cpp  Scene.cpp  SceneObject.cpp  Shader.cpp  Transform.cpp  glad.c
